# basic-quote-processor

./: .gitignore  CODEBASE.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
configs/: nvda_60s.toml
docs/design/: 01_THEORETICAL_FOUNDATION.md  02_MODULE_ARCHITECTURE.md  03_DATA_FLOW.md  04_FEATURE_SPECIFICATION.md  05_CONFIGURATION_SCHEMA.md  06_INTEGRATION_POINTS.md  07_TESTING_STRATEGY.md
docs/plan/: EXPERIMENT_ORCHESTRATION_LAYER.md
src/: config.rs  context.rs  contract.rs  dates.rs  error.rs  hash.rs  lib.rs  pipeline.rs
src/accumulator/: burst_tracker.rs  count_accumulator.rs  flow_accumulator.rs  forward_fill.rs  mod.rs  stats_accumulator.rs
src/bbo_state/: midpoint.rs  mod.rs  validation.rs
src/export/: diagnostics.rs  manifest.rs  metadata.rs  mod.rs  normalization.rs  npy_writer.rs
src/features/: indices.rs  mod.rs
src/labeling/: forward_prices.rs  mod.rs  point_return.rs
src/reader/: dbn_reader.rs  mod.rs  publisher.rs  record.rs
src/sampling/: mod.rs  time_bin_sampler.rs
src/sequence_builder/: mod.rs
src/trade_classifier/: bjzz.rs  bvc.rs  midpoint_signer.rs  mod.rs  types.rs
tests/: classifier_test.rs  contract_conformance_test.rs  integration_test.rs  phase3_test.rs  phase4_test.rs  phase5_test.rs
