[package]
name = "basic-quote-processor"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["nagarx"]
description = "Off-exchange trade processing for XNAS.BASIC CMBP-1 data"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["off-exchange", "trf", "hft", "microstructure", "retail-flow"]
categories = ["finance", "science"]

[lib]
name = "basic_quote_processor"
path = "src/lib.rs"

[dependencies]
# Shared time utilities (regime classification, DST-aware offset)
hft-statistics = { git = "https://github.com/nagarx/hft-statistics.git", branch = "main" }

# Databento data format (CMBP-1 records via CbboMsg type)
dbn = { git = "https://github.com/databento/dbn.git", tag = "v0.20.0" }

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time (for file discovery date parsing)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# NPY export (Phase 4: match MBO extractor versions exactly)
ndarray = "0.15"
ndarray-npy = "0.8"

# CLI argument parsing (Phase 5)
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "export_dataset"
path = "src/bin/export_dataset.rs"

[[bin]]
name = "validate_coverage"
path = "src/bin/validate_coverage.rs"

[[bin]]
name = "profile_data"
path = "src/bin/profile_data.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
